# subscription-manager

./: .gitignore  BUILD.md  README.md  TODO.md  docker-compose.yml
.git-templates/hooks/: pre-commit
.github/workflows/: rust-ci.yaml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml
backend/database/: database.dia  delete_db.sql  delete_table.sql  fill.sql  fill_db.sql  fill_test_db.sql  init.sql  init_all_docker.sql  init_db.sql  init_table.sql
backend/src/: main.rs
backend/src/dao_entities/: brand_dao.rs  category_dao.rs  mod.rs  subscription_dao.rs
backend/src/dto_entities/: brand_dto.rs  category_dto.rs  dataviz_dto.rs  mod.rs  subscription_dto.rs  upload_dto.rs
backend/src/fairings/: cors.rs
backend/src/repositories/: brand_repository.rs  category_repository.rs  mod.rs  subscription_repository.rs
backend/src/routes/: brand_routes.rs  category_routes.rs  dataviz_routes.rs  healthcheck.rs  mod.rs  subscription_routes.rs  upload_routes.rs
backend/src/services/: brand_service.rs  category_service.rs  dataviz_service.rs  mod.rs  subscription_service.rs  upload_service.rs
backend/src/utils/: mod.rs
frontend/: .env.dev  .env.production  .eslintrc.json  .gitignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
frontend/src-tauri/: tauri.conf.json
kubfiles/: api-deployment.yaml  api-service.yaml  client-side-networkpolicy.yaml  db-deployment.yaml  db-service.yaml  env-production-db-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  server-side-networkpolicy.yaml
(+45 files in other folders)
